--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.mano.holyquran" >
+    package="com.mano.theholyqran">
 
     <application
         android:allowBackup="true"
@@ -11,11 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HolyQuran"
-        tools:targetApi="31" >
+        android:theme="@style/Theme.TheHolyQran"
+        tools:targetApi="31">
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.TheHolyQran.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
