--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.TheHolyQran"
         tools:targetApi="31">
         <activity
+            android:name=".ayat_list_view"
+            android:exported="false" />
+        <activity
+            android:name=".surahView"
+            android:exported="false" />
+        <activity
             android:name=".SurahIndex"
             android:exported="false" />
         <activity
