--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.mano.theholyqran">
+    package="com.mano.theholyqran" >
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TheHolyQran"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".search_popup"
+            android:exported="false" />
         <activity
             android:name=".KnowMore"
             android:exported="false" />
@@ -32,7 +35,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.TheHolyQran.NoActionBar">
+            android:theme="@style/Theme.TheHolyQran.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
